Sources/Engine/NeoAxis.Core/Libraries/SharpBgfx/NativeMethods.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void bgfx_encoder_set_compute_dynamic_index_buffer(IntPtr encoder, byte stage, ushort handle, ComputeBufferAccess access);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void bgfx_encoder_set_compute_dynamic_vertex_buffer(IntPtr encoder, byte stage, ushort handle, ComputeBufferAccess access);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void bgfx_encoder_set_compute_indirect_buffer(IntPtr encoder, byte stage, ushort handle, ComputeBufferAccess access);

        //!!!!betauser
        [DllImport( DllName, CallingConvention = CallingConvention.Cdecl )]
        public static extern int bgfx_encoder_dispatch( IntPtr encoder, ushort id, ushort program, uint numX, uint numY, uint numZ, [MarshalAs( UnmanagedType.U1 )] DiscardFlags flags );
        //[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        //public static extern int bgfx_encoder_dispatch(IntPtr encoder, ushort id, ushort program, uint numX, uint numY, uint numZ);

        //!!!!betauser
        [DllImport( DllName, CallingConvention = CallingConvention.Cdecl )]
        public static extern int bgfx_encoder_dispatch_indirect( IntPtr encoder, ushort id, ushort program, ushort indirectHandle, ushort start, ushort num, [MarshalAs( UnmanagedType.U1 )] DiscardFlags flags );
        //[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        //public static extern int bgfx_encoder_dispatch_indirect(IntPtr encoder, ushort id, ushort program, ushort indirectHandle, ushort start, ushort num);

        //!!!!betauser
        [DllImport( DllName, CallingConvention = CallingConvention.Cdecl )]
        public static extern void bgfx_encoder_discard( IntPtr encoder, [MarshalAs( UnmanagedType.U1 )] DiscardFlags flags );
        //[DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        //public static extern void bgfx_encoder_discard(IntPtr encoder);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void bgfx_encoder_blit(IntPtr encoder, ushort id, ushort dst, byte dstMip, ushort dstX, ushort dstY, ushort dstZ, ushort src,
                                                    byte srcMip, ushort srcX, ushort srcY, ushort srcZ, ushort width, ushort height, ushort depth);

        //!!!!betauser
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint bgfx_topology_convert(TopologyConvert conversation, IntPtr dst, uint dstSize, IntPtr indices, uint numIndices, [MarshalAs(UnmanagedType.U1)] bool index32);

        //!!!!betauser
        [DllImport( DllName, CallingConvention = CallingConvention.Cdecl )]
        public static extern void bgfx_set_triple_buffering();

        //!!!!betauser
        //!!!!temp
        [DllImport( DllName, CallingConvention = CallingConvention.Cdecl )]
        public unsafe static extern void bgfx_get_gpu_description( int bufferSize, byte* result );

        //!!!!betauser
        [DllImport( DllName, CallingConvention = CallingConvention.Cdecl )]
        public static extern IntPtr bgfx_call_special( [MarshalAs( UnmanagedType.LPStr )] string name, IntPtr parameter1, IntPtr parameter2,
            IntPtr parameter3, IntPtr parameter4 );

#pragma warning restore IDE1006 // Naming Styles

        //!!!!betauser
        public const string DllName = "bgfx";
//#if DEBUG
//        public const string DllName = "bgfx_debug.dll";
//#else
//        public const string DllName = "bgfx.dll";
//#endif
    }
}
